<resources>
    <string name="app_name">MoodDetect</string>

    <!-- Strings related to login -->
    <string name="preference_file_key">com.a660project.www.mooddetect</string>
    <string name="heart_rate">HEART RATE</string>
    <string name="device_name">DEVICE_NAME</string>
    <string name="device_address">DEVICE_ADDRESS</string>
    <string name="user_email">USER_EMAIL</string>
    <string name="user_height">USER_HEIGHT</string>
    <string name="user_weight">USER_WEIGHT</string>
    <string name="cancel">Cancel Registration</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_height">Height in cm</string>
    <string name="prompt_weight">Weight in Kg</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_Register">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
